# ordinary_statistics

./: CMakeLists.txt
include/: ordinary_statistics.h
src/: CMakeLists.txt  ordinary_statistics.cpp
test/: array  main.cpp
tests/: CMakeLists.txt  tests.cpp
